--- a/source/templates/__0-test-datum.html
+++ b/source/templates/__0-test-datum.html
@@ -1,4 +1,4 @@
 {% extends '_base.html' %}
 {% block main %}
-<h1>Test generated template</h1>
+<h1>Test generated template {{ title | slug }}</h1>
 {% endblock %}
