--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -1,7 +1,5 @@
 {% extends '_base.html' %}
 {% block main %}
+<!-- example child template -->
 <h1>Content from index file</h1>
 {% endblock %}
-
-
-
