--- a/source/templates/_template.html
+++ b/source/templates/_template.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
 {% block main %}
+<!-- example auto generated file template -->
 <h1>Test generated template {{ title | slug }}</h1>
 {% endblock %}
