--- a/source/templates/_base.html
+++ b/source/templates/_base.html
@@ -15,7 +15,10 @@
     <!-- Pulls Slick CSS for sliders -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
 
-    <!-- Pulls the main styles -->
+    <!-- library/styleguide dist css -->
+    <link rel="stylesheet" href="css/lib/govlab-styleguide.css">
+
+    <!-- Pulls the site-specific styles -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body id="">
@@ -77,7 +80,7 @@
 
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js/lib/scripts.js"></script>
 
 </body>
 </html>
