--- a/source/templates/__example.html
+++ b/source/templates/__example.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
 {% block main %}
 <h1>Test generated template {{ title | slug }}</h1>
+<p>{{ example }}</p>
 {% endblock %}
