--- a/source/templates/example/3f9823f09ahfh9-bear-datum.html
+++ b/source/templates/example/3f9823f09ahfh9-bear-datum.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
 {% block main %}
 <h1>Test generated template {{ title | slug }}</h1>
+<p>{{ example }}</p>
 {% endblock %}
