--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7211,3 +7211,40 @@ code.m-negative {
   width: 80%;
   max-height: 300px;
   width: 40%; }
+
+#b-homepage .b-top-section {
+  background-image: url(/img/temp-backgrounds/temp1.jpeg);
+  background-size: cover;
+  height: 50vh;
+  position: relative; }
+
+#b-homepage .e-titles {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 20px; }
+
+#b-homepage h3 {
+  text-transform: uppercase;
+  font-size: 20px;
+  margin: 0;
+  width: auto;
+  padding: 5px 8px;
+  font-weight: 400; }
+
+#b-homepage h2 {
+  font-size: 50px;
+  font-weight: 200;
+  text-transform: none;
+  line-height: 1.1; }
+
+#b-homepage .b-description {
+  font-weight: 300;
+  font-size: 24px;
+  margin-top: 5px; }
+
+#b-homepage i.m-xl-badge {
+  width: 100px;
+  font-size: 100px;
+  color: rgba(255, 255, 255, 0.2);
+  margin: 30px 0 0 0; }
