--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -3,26 +3,27 @@
 // and @import in styles.scss
 
 // BASE
+.b-top-nav.m-transparent {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white; 
+}
+
 .b-footer .e-content {
-
-    h4 {
-        @include breakpoint($mobile-only) { 
-          text-align: center; 
-        }
+  h4 {
+    @include breakpoint($mobile-only) { 
+      text-align: center; 
     }
-
-    .e-partner-logo {
-        text-align: center;
+  }
+  .e-partner-logo {
+    text-align: center;
+  }
+  .e-partner-logo > img {
+    @include breakpoint($mobile-only) {
+      width: 80%;
+      max-height: 300px;
     }
-    .e-partner-logo > img {
-
-        @include breakpoint($mobile-only) {
-            width: 80%;
-            max-height: 300px;
-        }
-
-        width: 40%;
-    }
+    width: 25%;
+  }
 }
 
 
