--- a/css/styles.css
+++ b/css/styles.css
@@ -7201,6 +7201,10 @@ code.m-negative {
   .sandbox {
     background-color: blue; } }
 
+.b-top-nav.m-transparent {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white; }
+
 .b-footer .e-content h4 {
   text-align: center; }
 
@@ -7210,7 +7214,7 @@ code.m-negative {
 .b-footer .e-content .e-partner-logo > img {
   width: 80%;
   max-height: 300px;
-  width: 40%; }
+  width: 25%; }
 
 #b-homepage .b-top-section {
   background-image: url(/img/temp-backgrounds/temp1.jpeg);
