--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7252,3 +7252,47 @@ code.m-negative {
   font-size: 100px;
   color: rgba(255, 255, 255, 0.2);
   margin: 30px 0 0 0; }
+
+.b-surveys-page .b-top-section {
+  background-size: cover;
+  height: 50vh;
+  position: relative; }
+
+.b-surveys-page .e-titles {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 20px; }
+
+.b-surveys-page h3 {
+  text-transform: uppercase;
+  font-size: 20px;
+  margin: 0;
+  width: auto;
+  padding: 5px 8px;
+  font-weight: 400; }
+
+.b-surveys-page #download-button {
+  bottom: -45px;
+  position: absolute;
+  text-align: center;
+  width: 100%; }
+  .b-surveys-page #download-button a {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); }
+  .b-surveys-page #download-button .material-icons {
+    font-size: 24px;
+    line-height: 24px; }
+
+.b-surveys-page .survey-summary {
+  margin: 40px 0px;
+  padding: 10px; }
+  .b-surveys-page .survey-summary .e-description-title {
+    font-weight: 600;
+    color: rgba(51, 51, 51, 0.4);
+    margin-right: 30px;
+    line-height: .9;
+    padding-left: 0;
+    text-align: right; }
+  .b-surveys-page .survey-summary .e-description {
+    line-height: 1.6;
+    font-size: 18px; }
