--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -71,7 +71,62 @@
 }
 
 
+// SURVEYS
+.b-surveys-page{
 
+  .b-top-section {
+    background-size: cover;
+    height: 50vh;
+    position: relative;
+  }
+  .e-titles {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 20px;
+    }
+  h3 {
+    text-transform: uppercase;
+    font-size: 20px;
+    margin: 0;
+    width: auto;
+    padding: 5px 8px;
+    font-weight: 400;
+  }
+  #download-button {
+    bottom: -45px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+
+    a { box-shadow: 0 0 5px $gray-20; }
+    .material-icons {
+        font-size: 24px;
+        line-height: 24px;
+    }
+  }
+
+  .survey-summary {
+    margin: 40px 0px;
+    padding: 10px;
+    .e-description-title {
+      font-weight: 600;
+      color: rgba($black, .4);
+      margin-right: 30px;
+      line-height: .9;
+      padding-left: 0;
+      text-align: right;
+      // @include breakpoint($mobile-only) {
+      //   text-align: left;
+      // }
+    }
+    .e-description {
+      line-height: 1.6;
+      font-size: 18px;
+    }
+
+  }
+}
 
 
 
