--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7203,7 +7203,12 @@ code.m-negative {
 
 .b-top-nav.m-transparent {
   background-color: rgba(0, 0, 0, 0.5);
-  color: white; }
+  color: white;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  padding: 10px 20px 20px 20px; }
 
 .b-footer .e-content h4 {
   text-align: center; }
