--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -4,10 +4,15 @@
 
 // BASE
 .b-top-nav.m-transparent {
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white; 
-}
-
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    padding: 10px 20px 20px 20px;
+  }
+  
 .b-footer .e-content {
   h4 {
     @include breakpoint($mobile-only) { 
