--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -6,8 +6,8 @@
     <div class="row expanded">
       <div class="small-10 column small-centered e-titles">
         <div class="e-shade"></div>
-            <h1>Data Driven Criminal Justice</h1>
-            <h3>Surveys on the needs, challenges and variables of developing a data driven criminal justice system</h3>
+            <h1 class="e-main-title">Data Driven Criminal Justice</h1>
+            <h3 class="e-tagline">Surveys on the needs, challenges and variables of developing a data driven criminal justice system</h3>
       </div>
     </div>
   </div>
