--- a/source/templates/surveys/0172f53c49038b6053b56a0f545fa150-empirical-criminal-justice-researcher-survey.html
+++ b/source/templates/surveys/0172f53c49038b6053b56a0f545fa150-empirical-criminal-justice-researcher-survey.html
@@ -5,10 +5,10 @@
 
   <div class="b-top-section" style='background-image: url(./img/temp-backgrounds/{{image}})'>
     <div class="row expanded">
-      <div class="large-10 column large-centered e-titles">
+      <div class="small-10 column small-centered e-titles">
         <div class="e-shade"></div>
-          <h1>{{title}}</h1>
-          <h3>{{goal}}</h3>
+          <h1 class="e-main-title">{{title}}</h1>
+          <h3 class="e-tagline">{{goal}}</h3>
           <div id="download-button">
             <a href="#" class="b-button m-purple ">Download the Slides<i class="material-icons m-space">file_download</i></a>
           </div>
