--- a/css/styles.css
+++ b/css/styles.css
@@ -7217,29 +7217,16 @@ code.m-negative {
   text-align: center; }
 
 .b-footer .e-content .e-partner-logo > img {
-  width: 80%;
-  max-height: 300px;
-  width: 25%; }
+  width: 25%;
+  width: 200px;
+  max-height: 300px; }
+  @media screen and (min-width: 64.0625em) {
+    .b-footer .e-content .e-partner-logo > img {
+      width: 25%;
+      max-height: 300px; } }
 
 #b-homepage .b-top-section {
-  background-image: url(/img/temp-backgrounds/temp1.jpeg);
-  background-size: cover;
-  height: 50vh;
-  position: relative; }
-
-#b-homepage .e-titles {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 20px; }
-
-#b-homepage h3 {
-  text-transform: uppercase;
-  font-size: 20px;
-  margin: 0;
-  width: auto;
-  padding: 5px 8px;
-  font-weight: 400; }
+  background-image: url(/img/temp-backgrounds/temp1.jpeg); }
 
 #b-homepage h2 {
   font-size: 50px;
@@ -7249,7 +7236,7 @@ code.m-negative {
 
 #b-homepage .b-description {
   font-weight: 300;
-  font-size: 24px;
+  font-size: 22px;
   margin-top: 5px; }
 
 #b-homepage i.m-xl-badge {
@@ -7258,27 +7245,44 @@ code.m-negative {
   color: rgba(255, 255, 255, 0.2);
   margin: 30px 0 0 0; }
 
-.b-surveys-page .b-top-section {
+.b-surveys-page .b-top-section,
+#b-homepage .b-top-section {
   background-size: cover;
-  height: 50vh;
+  height: 72vh;
   position: relative; }
+  .b-surveys-page .b-top-section .e-main-title,
+  #b-homepage .b-top-section .e-main-title {
+    font-size: 50px; }
+    @media screen and (min-width: 64.0625em) {
+      .b-surveys-page .b-top-section .e-main-title,
+      #b-homepage .b-top-section .e-main-title {
+        font-size: 60px; } }
+  .b-surveys-page .b-top-section .e-tagline,
+  #b-homepage .b-top-section .e-tagline {
+    font-size: 20px; }
+    @media screen and (min-width: 64.0625em) {
+      .b-surveys-page .b-top-section .e-tagline,
+      #b-homepage .b-top-section .e-tagline {
+        font-size: 28px; } }
 
-.b-surveys-page .e-titles {
+.b-surveys-page .e-titles,
+#b-homepage .e-titles {
   position: absolute;
-  bottom: 20px;
+  bottom: 100px;
   width: 100%;
   padding: 20px; }
 
-.b-surveys-page h3 {
+.b-surveys-page h3,
+#b-homepage h3 {
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 24px;
   margin: 0;
   width: auto;
   padding: 5px 8px;
-  font-weight: 400; }
+  font-weight: 300; }
 
 .b-surveys-page #download-button {
-  bottom: -45px;
+  bottom: -127px;
   position: absolute;
   text-align: center;
   width: 100%; }
@@ -7292,12 +7296,16 @@ code.m-negative {
   margin: 40px 0px;
   padding: 10px; }
   .b-surveys-page .survey-summary .e-description-title {
-    font-weight: 600;
     color: rgba(51, 51, 51, 0.4);
-    margin-right: 30px;
     line-height: .9;
     padding-left: 0;
-    text-align: right; }
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 22px;
+    text-align: left; }
+    @media screen and (min-width: 64.0625em) {
+      .b-surveys-page .survey-summary .e-description-title {
+        text-align: right; } }
   .b-surveys-page .survey-summary .e-description {
-    line-height: 1.6;
-    font-size: 18px; }
+    font-size: 1.2rem;
+    font-weight: 300; }
