Add index banner inline

--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -39,9 +39,9 @@
 
 // INDEX
 #b-homepage {
-  .b-top-section {
-    background-image: url(/img/temp-backgrounds/temp1.jpeg);
-  }
+  // .b-top-section {
+  //   background-image: url(./img/temp-backgrounds/temp1.jpeg);
+  // }
   h2 {
     font-size: 50px;
     font-weight: 200;
