--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -2,7 +2,7 @@
 {% block main %}
 <div id="b-homepage">
 
-  <div class="b-top-section">
+  <div class="b-top-section" style="background-image: url(./img/temp-backgrounds/temp1.jpeg)">
     <div class="row expanded">
       <div class="small-10 column small-centered e-titles">
         <div class="e-shade"></div>
