--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -7,6 +7,7 @@
       <div class="small-10 column small-centered e-titles">
         <div class="e-shade"></div>
             <h1 class="e-main-title">Data Driven Criminal Justice</h1>
+            {{$global}}
             <h3 class="e-tagline">Surveys on the needs, challenges and variables of developing a data driven criminal justice system</h3>
       </div>
     </div>
