--- a/source/templates/surveys/29baf3a17a6b1ae77e4f83c9354a07bb-the-cjcc-survey.html
+++ b/source/templates/surveys/29baf3a17a6b1ae77e4f83c9354a07bb-the-cjcc-survey.html
@@ -1,5 +1,15 @@
 {% extends '_base.html' %}
 
+{% block menu %}
+<nav class="b-main-menu">
+    <a href="./">Home</a>
+    {% for survey in $global.surveys %}
+        <a href="{{survey.id}}-{{survey.title | slug }}.html">{{survey.title}}</a>
+    {% endfor %}
+</nav>
+{% endblock %}
+
+
 {% block main %}
 <div class='b-surveys-page'>
 
