--- a/css/styles.css
+++ b/css/styles.css
@@ -7614,41 +7614,53 @@ textarea {
 .b-surveys-page .b-top-section,
 #b-homepage .b-top-section {
   background-size: cover;
-  height: 72vh;
-  position: relative; }
+  height: 75vh;
+  position: relative;
+  color: white; }
+  .b-surveys-page .b-top-section .e-shade,
+  #b-homepage .b-top-section .e-shade {
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8)); }
   .b-surveys-page .b-top-section .e-main-title,
   #b-homepage .b-top-section .e-main-title {
-    font-size: 50px; }
+    font-size: 2.6rem;
+    font-weight: 400; }
     @media screen and (min-width: 64.0625em) {
       .b-surveys-page .b-top-section .e-main-title,
       #b-homepage .b-top-section .e-main-title {
-        font-size: 60px; } }
+        font-size: 60px;
+        font-weight: 100; } }
   .b-surveys-page .b-top-section .e-tagline,
   #b-homepage .b-top-section .e-tagline {
-    font-size: 20px; }
+    font-size: 1.25rem;
+    font-weight: 400; }
     @media screen and (min-width: 64.0625em) {
       .b-surveys-page .b-top-section .e-tagline,
       #b-homepage .b-top-section .e-tagline {
-        font-size: 28px; } }
+        font-size: 30px;
+        font-weight: 100; } }
 
 .b-surveys-page .e-titles,
 #b-homepage .e-titles {
-  position: absolute;
   bottom: 100px;
   width: 100%;
   padding: 20px; }
-
-.b-surveys-page h3,
-#b-homepage h3 {
-  text-transform: uppercase;
-  font-size: 24px;
-  margin: 0;
-  width: auto;
-  padding: 5px 8px;
-  font-weight: 300; }
+  .b-surveys-page .e-titles h3,
+  #b-homepage .e-titles h3 {
+    text-transform: uppercase;
+    font-size: 24px;
+    margin: 0;
+    width: auto;
+    padding: 5px 8px;
+    font-weight: 300; }
 
 .b-surveys-page #download-button {
-  bottom: -127px;
+  bottom: -27px;
   position: absolute;
   text-align: center;
   width: 100%; }
